# XenoWS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ninja  build.sh
include/XenoWS/: Date.h  Options.h  XenoWS.hpp  defs.h  shell.h  utils.h
src/: Date.c  Date.h  Options.h  Response.hpp  XenoWS.cpp  XenoWS.hpp  date.c  date.h  defs.h  die.c  die.h  hashmap.c  hashmap.h  http.c  http.h  main.c  main.cpp  oom.c  oom.h  shell.c  shell.h  util.c  util.h  utils.c  utils.h
